[gd_scene load_steps=4 format=3 uid="uid://cl5t3dlirbq4t"]

[ext_resource type="Script" path="res://singletons/generator_silver/generator_silver.gd" id="1_jpokb"]
[ext_resource type="PackedScene" uid="uid://el4u35l0xltc" path="res://singletons/generator_silver/upgrade_01/upgrade_01.tscn" id="2_vq3sb"]
[ext_resource type="PackedScene" uid="uid://bt2gd45i2oaxx" path="res://singletons/generator_silver/upgrade_02/upgrade_02.tscn" id="3_lb35k"]

[node name="GeneratorSilver" type="Node"]
script = ExtResource("1_jpokb")

[node name="Upgrade01" parent="." instance=ExtResource("2_vq3sb")]

[node name="Upgrade02" parent="." instance=ExtResource("3_lb35k")]

[node name="Timer" type="Timer" parent="."]
